--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,7 +1,3 @@
-* {
-    
-    box-sizing: border-box;
-}
 
 html {
     font-size: 1rem;
@@ -10,33 +6,37 @@ html {
 
 body, header, main, footer {
     min-height: 50px;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+    margin: 0 0.5rem 0 0.5rem;
     min-width: 400px;
+}
+*::selection {
+    background-color: rgba(162, 48, 214, 0.637);
 }
 
 body {
-    margin-top: 0.5rem;
-    background-color: rgb(36, 35, 35);
+    margin-top: auto;
+    background-color: black;
     font-family: 'Dongle', sans-serif;
 }
 main {
     min-height: 200px;
     overflow: auto;
     background-color: white;
+    
+    
 
 }
 
 header {
-    border-radius: 50px 50px 0px 0;
     display: block;
-    background: linear-gradient(rgb(60, 4, 77), rgb(160, 42, 175), rgb(255, 255, 255));
-    box-shadow: 0 0 0.5rem rgb(83 78 76 / 50%);
+    background: linear-gradient(rgb(60, 4, 77), rgb(160, 42, 175), rgba(255, 255, 255, 0.849));
+    
+    
+}
+header {position: sticky;top: 0;
 }
 
-footer {
-    background: white ;
-}
+
 
 /* Contenido principal del sitio. Le damos estilo al div que esta dentro del main.
 Solo funciona si el div es hijo directo del main, no funciona si esta
@@ -76,6 +76,7 @@ main>aside {
     width: auto;
     text-align: center;
     margin-bottom: 0;
+    padding: 0.5rem 1rem 0 0.5rem;
     color: rgb(255, 255, 255);
     text-shadow: 0 0 0.2em rgb(133, 212, 238), 0 0 0.2em rgb(119, 205, 255),
 		0 0 0.2em rgb(116, 13, 148);
@@ -95,25 +96,26 @@ main>aside {
     padding-bottom: 15px;
 }
 
+
+/*Logo y Menu */
 #imagenlogo {
     width: 300px;
 }
 
-/*Logo y Menu */
+
 .encabezado-logo {
     width: auto;
     display:inline-block;
-    margin:1rem;
+    margin:0 0 0 3rem;
 
 
 }
 .encabezado-nav {
     left:auto;
-    position: relative;
     top: auto;
     width: auto;
     display: inline-block;
-    margin: 0.5rem 0  0.5rem 1rem;
+    margin: 0.5rem 0  0.5rem 5rem;
 }
 
 .encabezado-nav ul {
@@ -124,7 +126,7 @@ main>aside {
     float: left;
     font-weight: 700;
     text-align: center;
-    margin: 1rem;
+    margin: 0 2rem 0 2rem;
     
 }
 
@@ -138,6 +140,7 @@ main>aside {
     text-shadow: 0 0 0.2em rgb(159, 111, 236), 0 0 0.2em #87F,
 		0 0 0.2em #87F;
     color: rgb(134, 234, 241);
+    transition: 1s;
     
 }
 
@@ -145,5 +148,49 @@ main>aside {
 .encabezado-nav li a {
     font-size: 1.5rem;
     background: transparent;   
+}
+/* Estilos del Aside */
+.contenidolateral {
+    min-height: 50px;
+    margin: 0.5rem;
+    box-shadow: 0 0 0.5rem rgb(83 78 76 / 50%);
+    border-radius: 50px 50px 5px 5px;
+}
+.contenidolateral h3 {
+    background: linear-gradient(rgb(116, 13, 148), rgb(160, 42, 175), rgb(255, 255, 255));
+    border-radius: 50px 50px 0 0;
+    font-size: 30px;
+    width: auto;
+    text-align: center;
+    margin: auto;
+    padding: 0.6rem 0.5rem 0 0.5rem;
+    color: rgb(255, 255, 255);
+    text-shadow: 0 0 0.2em rgb(133, 212, 238), 0 0 0.2em rgb(119, 205, 255),
+		0 0 0.2em rgb(116, 13, 148);
+    
+
+}
+
+/* Estilos del Footer */
+footer {
+    background-color: white;
+}
+footer div{
+    display: inline-block;
+    margin-top:0;
+    padding: auto;
+    text-align: center;
+    width: 100%;
+    background:rgb(160, 42, 175) ;
+    border-radius: 50% 50% 0 0;
+    color: white;
+    box-shadow: 0 0 0.9rem rgba(58, 55, 54, 0.575);
+        
+    
+   
+}
+footer div img {
+    width: 2rem;
+    margin: 1rem;
 }
 
