--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -261,6 +261,7 @@ footer div img {
      display: block; /* Ahora los inputs quedan debajo de los label */
      padding: 0; /* Separando espacios internos */
      margin: 0;
+     cursor: pointer;/* hand cursor*/
  }
  
 .contactoform li {
@@ -298,5 +299,12 @@ footer div img {
 		0 0 0.2em #87F;
     color: rgb(134, 234, 241);
     transition: 1s;
+    
+}
+.inputarchivo {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
     
 }
