--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -261,7 +261,6 @@ footer div img {
      display: block; /* Ahora los inputs quedan debajo de los label */
      padding: 0; /* Separando espacios internos */
      margin: 0;
-     cursor: pointer;/* hand cursor*/
  }
  
 .contactoform li {
@@ -301,10 +300,42 @@ footer div img {
     transition: 1s;
     
 }
-.inputarchivo {
-    width: 0.1px;
-    height: 0.1px;
-    opacity: 0;
-    overflow: hidden;
+
+/* Estilos en página de búsqueda */
+.search-box {
+    width: 50%;
+    position: relative;
+    display: inline-block;
+    margin: 5rem;
+}
+
+.search-box input[type="text"] {
+    
+    padding: 10px;
+    font-size: 16px;
+    border-style: solid;
+    border-radius: 5px;
+    width: 300px;
+}
+
+.search-box button {
+    position: relative;
+    padding: 0 10px;
+    margin: 5px;
+    border: 1px rgb(66, 6, 58) solid;
+    background:#732375;
+    font-family: 'Dongle', sans-serif;
+    color: rgb(236, 190, 240);
+    font-size: 30px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.search-box button:hover{
+    text-shadow: 0 0 0.2em rgb(159, 111, 236), 0 0 0.2em #87F,
+		0 0 0.2em #87F;
+    color: rgb(134, 234, 241);
+    transition: 1s;
     
 }
